log/combned.metagpu9.3288886.err
Traceback (most recent call last):
  File "main.py", line 14, in <module>
    from train_search import darts
  File "/home/rkohli/aml-project/src/train_search.py", line 77
    optimizer, float(args['epochs']), eta_min=args['learning_rate_min)
                                                                     ^
SyntaxError: EOL while scanning string literal
